--- a/repos/gateway/src/main/webapp/app/entities/employee/list/employee.component.html
+++ b/repos/gateway/src/main/webapp/app/entities/employee/list/employee.component.html
@@ -116,14 +116,9 @@
                 <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
               </button>
 
-              <!-- <button type="submit" [routerLink]="['/employee',employee.id, 'edocument']" class="btn btn-success btn-sm" data-cy="entityDocumentButton">
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" >Document</span>
-              </button> -->
-
               <button
                 type="submit"
-                [routerLink]="['/employee', employee.id, 'edocument']"
+                [routerLink]="['/employee', employee.id, 'document']"
                 class="btn btn-success btn-sm"
                 data-cy="entityDocumentButton"
               >
