--- a/repos/gateway/src/main/webapp/app/entities/employee/list/employee.component.html
+++ b/repos/gateway/src/main/webapp/app/entities/employee/list/employee.component.html
@@ -123,7 +123,7 @@
 
               <button
                 type="submit"
-                [routerLink]="['/employee', employee.id, 'edocument']"
+                [routerLink]="['/employee', employee.id, 'document']"
                 class="btn btn-success btn-sm"
                 data-cy="entityDocumentButton"
               >
